feat: add schema components generator with refs
